--- a/vue-3_boilerplate-1/package.json
+++ b/vue-3_boilerplate-1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-3_boilerplate-1",
+  "name": "vue-3_boilerplate",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.36",
+    "vee-validate": "^4.9.6",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
